...
    <item name="CREATE_SUB_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_COMMAND" type="id" />
    <item name="CREATE_ACCOUNT_FOR_TRANSFER_COMMAND" type="id" />
    <item name="CREATE_TEMPLATE_COMMAND" type="id" />
    <item name="DELETE_COMMAND" type="id" />
    <item name="DELETE_COMMAND_DO" type="id" />
    <item name="DISTRIBUTION_COMMAND" type="id" />
    <item name="EDIT_PLAN_INSTANCE_COMMAND" type="id" />
    <item name="EDIT_COMMAND" type="id" />
    <item name="FEEDBACK_COMMAND" type="id" />
    <item name="GROUPING_COMMAND" type="id" />
    <item name="HANDLE_RESTORE_ON_INSTALL_COMMAND" type="id" />
    <item name="HELP_COMMAND" type="id" />
    <item name="INVERT_COMMAND" type="id" />
    <item name="MANAGE_TEMPLATES_COMMAND" type="id" />
    <item name="MORE_ACTIONS_DIALOG" type="id" />
    <item name="MORE_INFO_DIALOG" type="id" />
    <item name="NO_COMMAND" type="id" />
    <item name="PASSWORD_WARNING_DIALOG" type="id" />
    <item name="RATE_COMMAND" type="id" />
    <item name="RESET_COMMAND" type="id" />
    <item name="RESTORE_COMMAND" type="id" />
    <item name="SAVE_AND_NEW_COMMAND" type="id" />
    <item name="SELECT_ACCOUNT_DIALOG" type="id" />
    <item name="SETTINGS_COMMAND" type="id" />
    <item name="TEMPLATE_TITLE_DIALOG" type="id" />
    <item name="WEB_COMMAND" type="id" />
    <item name="ROADMAP_RESULT_COMMAND" type="id" />
    <item name="ROADMAP_CLEAR_COMMAND" type="id" />
    <item name="ROADMAP_CLEAR_COMMAND_DO" type="id" />
    <item name="CREATE_INSTANCE_EDIT_COMMAND" type="id" />
...
    <item name="SORT_BY_AMOUNT_ASCENDING_COMMAND" type="id" />
    <item name="SORT_BY_AMOUNT_DESCENDING_COMMAND" type="id" />
    <item name="ROADMAP_DETAILS_COMMAND" type="id" />
    <item name="ROADMAP_ISSUE_VOTE_COMMAND" type="id" />
    <item name="ROADMAP_SUBMIT_VOTE" type="id" />
    <item name="SHARE_PDF_COMMAND" type="id" />
    <item name="HISTORY_COMMAND" type="id" />
    <item name="TOGGLE_BALANCE_COMMAND" type="id" />
    <item name="TOGGLE_INCLUDE_TRANSFERS_COMMAND" type="id" />
    <item name="TOGGLE_TOTALS_COMMAND" type="id" />
    <item name="ORIGINAL_AMOUNT_COMMAND" type="id" />
    <item name="ExchangeRateEdit1" type="id" />
    <item name="ExchangeRateEdit2" type="id" />
    <item name="UNGROUP_SPLIT_COMMAND" type="id" />
    <item name="GDPR_NO_CONSENT_COMMAND" type="id" />
    <item name="GDPR_CONSENT_COMMAND" type="id" />
    <item name="COLOR_COMMAND" type="id" />
    <item name="BUDGET_COMMAND" type="id" />
    <item name="MANAGE_CATEGORIES_COMMAND" type="id" />
    <item name="BACK_COMMAND" type="id" />
    <item name="FORWARD_COMMAND" type="id" />
    <item name="ROADMAP_COMMAND" type="id" />
    <item name="ACCOUNT_FLAGS_COMMAND" type="id" />
    <item name="BUDGET_ALLOCATED_ONLY" type="id" />
...
