...
    <string name="feedback">Feedback</string>
    <string name="ftp_uri_malformed">Malformed URI %1$s</string>
    <string name="grisbi_import_categories_loading">Loading categories from %1$s</string>
    <string name="grisbi_import_parties_loading">Loading parties from %1$s</string>
    <string name="grouping_day">Day</string>
    <string name="grouping_last_week">Last week</string>
    <string name="grouping_month">Month</string>
    <string name="grouping_none">Ungrouped</string>
    <string name="grouping_this_week">This week</string>
    <string name="grouping_week">Week</string>
    <string name="grouping_year">Year</string>
    <string name="help_button_rate">Rate or review</string>
    <string name="help_heading_credits">Credits</string>
...
    <string name="pref_manage_categories_summary">Add, edit, delete categories.</string>
    <string name="pref_manage_categories_title">Categories</string>
    <string name="pref_manage_methods_summary">Create and edit payment methods and associate them with account types.</string>
    <string name="pref_manage_methods_title">Payment methods</string>
    <string name="pref_manage_parties_summary" tools:ignore="UnusedResources">Add, edit, delete counterparties.</string>
    <string name="pref_manage_parties_title">Parties</string>
    <string name="pref_manage_sync_backends_title">Synchronization backends</string>
    <!-- %s will be replaced with list of backends -->
    <string name="pref_manage_sync_backends_summary">Add backends for synchronizing accounts (%s).</string>
    <string name="pref_more_info_dialog_title">Licence &amp; Credits</string>
    <string name="pref_password_not_equal">Passwords do not match</string>
    <string name="pref_perform_share_title">Share exports and backups</string>
    <!-- This entry is added to the list of available calendars, if no local calendar has been set up yet -->
...
    <string name="select">Select</string>
    <string name="select_category">Select category</string>
    <string name="select_payee">Select counterparty</string>
    <string name="share_scheme_not_supported">Scheme %1$s not supported</string>
    <string name="share_sending">Send export file</string>
    <string name="split_parts_heading">Splits</string>
    <string name="split_transaction">Split transaction</string>
    <string name="status">Status</string>
    <string name="status_cleared">cleared</string>
    <string name="status_reconciled">reconciled</string>
    <string name="status_unreconciled">unreconciled</string>
    <string name="status_void">void</string>
    <string name="subcategory">Subcategory</string>
...
    <string name="search_asset">Search for asset</string>
    <!-- Sort plans (recurring transactions) by the next instance  -->
    <string name="pref_sort_order_next_instance">Next instance</string>
    <string name="crash_dialog_title">{app_name} has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data, all you have to do is click OK.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="synchronization">Synchronization</string>
    <string name="synchronization_none">No synchronization</string>
    <string name="no_sync_backends">No synchronization backends</string>
    <string name="menu_create_sync_backend">New synchronization backend</string>
    <string name="validate_error_not_empty">Must not be empty</string>
    <string name="menu_sync_unlink">Stop syncing</string>
    <string name="menu_sync_link">Start syncing</string>
...
    <string name="synchronization_start">Starting synchronization for account %s.</string>
    <string name="synchronization_end_success" tools:ignore="PluralsCandidate">%1$d remote changes were written to local database. %2$d local changes were written to remote backend.</string>
    <string name="synchronization_end_success_none">No changes to synchronize.</string>
    <string name="pref_webdav_timeout_title">WebDAV Timeout (in seconds)</string>
    <string name="sync_state_restored" tools:ignore="PluralsCandidate">Sync state was restored for %d accounts.</string>
    <string name="sync_state_could_not_be_restored" tools:ignore="PluralsCandidate">Sync state could not be restored for %d accounts.</string>
    <string name="onboarding_ui_title">{app_name} adapts to your preference</string>
    <string name="onboarding_data_title">Let\'s set up your first account</string>
    <string name="onboarding_restore_from_cloud">Restore from cloud synchronization</string>
    <string name="onboarding_restore_from_local">Restore local backup file</string>
    <string name="contributed_by">Contributed by %s</string>
    <string name="pref_sync_notification_summary">Notify about synchronization progress</string>
    <string name="pref_debug_logging_summary">Write debugging information into system log</string>
    <string name="plan_custom_recurrence_info">Please save the template first. The plan will then be opened in the calendar app, where you can set a custom recurrence.</string>
...
    <string name="budget_filter_all_states">All status</string>
    <string name="budget_filter_all_tags">All tags</string>
    <string name="budget_filter_all_accounts">All accounts</string>
    <string name="dialog_title_warning_delete_budget">Delete budget?</string>
    <string name="warning_delete_budget">Budget \"%1$s\" will be deleted.</string>
    <string name="menu_edit_budget">Edit budget</string>
    <string name="onboarding_privacy_title">Your data stays in your hands</string>
    <string name="onboarding_privacy_intro">Your financial data is not sent to any server, neither operated by us nor by any third party.</string>
    <string name="app_restart_required">New configuration requires app restart to take effect.</string>
    <!-- Title of the submenu for changing the category, payer, payment method of multiple transactions. The entries of the submenu read "Category, "Payer", "Payment method" -->
    <string name="menu_remap">Remap</string>
    <string name="dialog_title_confirm_remap">Change mapping (%s) ?</string>
    <string name="remap_category">All selected transactions will be mapped to category %s.</string>
...
