<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!-- The main content view -->

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.appbar.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar_with_progress" />

            </com.google.android.material.appbar.AppBarLayout>

            <include
                android:id="@+id/viewPagerMain"
                layout="@layout/viewpager_main" />

            <include
                android:id="@+id/fab"
                layout="@layout/floating_action_button" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
        <!-- The navigation drawer -->
        <include
            android:id="@+id/accountPanel"
            layout="@layout/account_list" />
    </androidx.drawerlayout.widget.DrawerLayout>
</FrameLayout>