<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    <com.rd.PageIndicatorView2
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="16dp"
        app:piv_animationType="slide"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_viewPager="@id/viewPager"
        app:piv_padding="12dp"
        app:piv_radius="8dp" />
</FrameLayout>